fix overflowing posts

--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -40,6 +40,16 @@
 	margin-bottom: 10px;
 	contain: layout style;
 	z-index: 0;
+
+	border-radius: 3px;
+	border: 1px solid #dbdbdb;
+	border: 1px solid rgba(var(--post-border, 219, 219, 219), 1);
+	background-color: rgba(var(--post-bg, 255, 255, 255), 1);
+
+	position: relative;
+
+	display: grid;
+	grid-template-rows: auto auto auto 1fr auto;
 }
 
 .ige_textarea {
@@ -69,17 +79,6 @@
 
 .ige_button:disabled {
 	opacity: 0.3;
-}
-
-.ige_post {
-	border-radius: 3px;
-	border: 1px solid #dbdbdb;
-	border: 1px solid rgba(var(--post-border, 219, 219, 219), 1);
-	background-color: rgba(var(--post-bg, 255, 255, 255), 1);
-
-	display: flex;
-	flex-direction: column;
-	position: relative;
 }
 
 .ige_post_video {
@@ -181,6 +180,7 @@
 .ige_post-content {
 	display: flex;
 	flex-grow: 1;
+	overflow-y: auto;
 }
 
 .ige_post-content a {
@@ -199,14 +199,9 @@
 
 .ige_footer {
 	border-top: 1px solid rgba(var(--post-in-border, 239, 239, 239), 1);
-	color: rgba(var(--f52, 142, 142, 142), 1);
+	color: rgb(var(--footer-color, 142, 142, 142));
 	font-size: 14px;
 	line-height: 18px;
-
-	margin-left: -12px;
-	margin-right: -12px;
-
-	margin-top: auto;
 	height: 45px;
 }
 
